Fixed showDamage() and made it so the zindex changes to go behind the combat images when it falls

--- a/bbs.css
+++ b/bbs.css
@@ -612,3 +612,7 @@ dt {
 .statwindow {
     width: 300px;
 }
+.combatimg {
+    position: relative;
+    z-index: 99;
+}
